// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 1`] = `
[
  "cjs/server.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

const https = require('node:https');
const _interopDefault = e => e && e.__esModule ? e : {
  default: e
};
const https__default = /*#__PURE__*/_interopDefault(https);
https__default.default.createServer((req, res) => {
  res.writeHead(200, {
    'Content-Type': 'text/plain'
  });
  res.write('Hello World!');
  res.end();
}).listen(8080);
//# sourceMappingURL=server.cjs.map
",
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 2`] = `
[
  "esm/client.js",
  "function _typeof(obj) { "@babel/helpers - typeof"; return _typeof = "function" == typeof Symbol && "symbol" == typeof Symbol.iterator ? function (obj) { return typeof obj; } : function (obj) { return obj && "function" == typeof Symbol && obj.constructor === Symbol && obj !== Symbol.prototype ? "symbol" : typeof obj; }, _typeof(obj); }
function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== "undefined" && o[Symbol.iterator] || o["@@iterator"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === "number") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError("Invalid attempt to iterate non-iterable instance.\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method."); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }
function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === "string") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === "Object" && o.constructor) n = o.constructor.name; if (n === "Map" || n === "Set") return Array.from(o); if (n === "Arguments" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }
function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) arr2[i] = arr[i]; return arr2; }
function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if ("value" in descriptor) descriptor.writable = true; Object.defineProperty(target, _toPropertyKey(descriptor.key), descriptor); } }
function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, "prototype", { writable: false }); return Constructor; }
function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError("Cannot call a class as a function"); } }
function _defineProperty(obj, key, value) { key = _toPropertyKey(key); if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }
function _toPropertyKey(arg) { var key = _toPrimitive(arg, "string"); return _typeof(key) === "symbol" ? key : String(key); }
function _toPrimitive(input, hint) { if (_typeof(input) !== "object" || input === null) return input; var prim = input[Symbol.toPrimitive]; if (prim !== undefined) { var res = prim.call(input, hint || "default"); if (_typeof(res) !== "object") return res; throw new TypeError("@@toPrimitive must return a primitive value."); } return (hint === "string" ? String : Number)(input); }
// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
var Client = /*#__PURE__*/_createClass(function Client() {
  _classCallCheck(this, Client);
  _defineProperty(this, "prop", 123);
});
function* gen() {}
async function wait() {}
async function createClient() {
  await wait();
  var _iterator = _createForOfIteratorHelper(gen()),
    _step;
  try {
    for (_iterator.s(); !(_step = _iterator.n()).done;) {
      var iterator = _step.value;
      console.log(iterator);
    }
  } catch (err) {
    _iterator.e(err);
  } finally {
    _iterator.f();
  }
  return new Client();
}
export { createClient };
//# sourceMappingURL=client.js.map
",
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 3`] = `
[
  "lib/client.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

function _typeof(obj) { "@babel/helpers - typeof"; return _typeof = "function" == typeof Symbol && "symbol" == typeof Symbol.iterator ? function (obj) { return typeof obj; } : function (obj) { return obj && "function" == typeof Symbol && obj.constructor === Symbol && obj !== Symbol.prototype ? "symbol" : typeof obj; }, _typeof(obj); }
function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== "undefined" && o[Symbol.iterator] || o["@@iterator"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === "number") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError("Invalid attempt to iterate non-iterable instance.\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method."); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }
function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === "string") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === "Object" && o.constructor) n = o.constructor.name; if (n === "Map" || n === "Set") return Array.from(o); if (n === "Arguments" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }
function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) arr2[i] = arr[i]; return arr2; }
function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if ("value" in descriptor) descriptor.writable = true; Object.defineProperty(target, _toPropertyKey(descriptor.key), descriptor); } }
function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, "prototype", { writable: false }); return Constructor; }
function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError("Cannot call a class as a function"); } }
function _defineProperty(obj, key, value) { key = _toPropertyKey(key); if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }
function _toPropertyKey(arg) { var key = _toPrimitive(arg, "string"); return _typeof(key) === "symbol" ? key : String(key); }
function _toPrimitive(input, hint) { if (_typeof(input) !== "object" || input === null) return input; var prim = input[Symbol.toPrimitive]; if (prim !== undefined) { var res = prim.call(input, hint || "default"); if (_typeof(res) !== "object") return res; throw new TypeError("@@toPrimitive must return a primitive value."); } return (hint === "string" ? String : Number)(input); }
var Client = /*#__PURE__*/_createClass(function Client() {
  _classCallCheck(this, Client);
  _defineProperty(this, "prop", 123);
});
function* gen() {}
async function wait() {}
async function createClient() {
  await wait();
  var _iterator = _createForOfIteratorHelper(gen()),
    _step;
  try {
    for (_iterator.s(); !(_step = _iterator.n()).done;) {
      var iterator = _step.value;
      console.log(iterator);
    }
  } catch (err) {
    _iterator.e(err);
  } finally {
    _iterator.f();
  }
  return new Client();
}
exports.createClient = createClient;
//# sourceMappingURL=client.js.map
",
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 4`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

const EXAMPLE = 'foo';
exports.EXAMPLE = EXAMPLE;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 5`] = `
[
  "lib/test.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

class Spy {
  called = false;
  mock = () => {};
  method() {}
}
function spy() {
  const inst = new Spy();
  return jest.fn(inst.mock);
}
async function wait() {}
exports.spy = spy;
exports.wait = wait;
//# sourceMappingURL=test.js.map
",
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 6`] = `
[
  "package.json",
  {
    "browser": "./umd/client.js",
    "dependencies": {
      "typescript": "*",
    },
    "main": "./lib/index.js",
    "module": "./esm/client.js",
    "name": "project-rollup",
    "packemon": {
      "inputs": {
        "client": "src/client.ts",
        "index": "src/index.ts",
        "server": "src/server/core.ts",
        "test": "src/test-utils/base.ts",
      },
    },
  },
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 7`] = `
[
  "umd/client.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define("Packemon", ["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.Packemon = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.createClient = createClient;
  function _typeof(obj) { "@babel/helpers - typeof"; return _typeof = "function" == typeof Symbol && "symbol" == typeof Symbol.iterator ? function (obj) { return typeof obj; } : function (obj) { return obj && "function" == typeof Symbol && obj.constructor === Symbol && obj !== Symbol.prototype ? "symbol" : typeof obj; }, _typeof(obj); }
  function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== "undefined" && o[Symbol.iterator] || o["@@iterator"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === "number") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError("Invalid attempt to iterate non-iterable instance.\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method."); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }
  function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === "string") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === "Object" && o.constructor) n = o.constructor.name; if (n === "Map" || n === "Set") return Array.from(o); if (n === "Arguments" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }
  function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) arr2[i] = arr[i]; return arr2; }
  function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if ("value" in descriptor) descriptor.writable = true; Object.defineProperty(target, _toPropertyKey(descriptor.key), descriptor); } }
  function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, "prototype", { writable: false }); return Constructor; }
  function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError("Cannot call a class as a function"); } }
  function _defineProperty(obj, key, value) { key = _toPropertyKey(key); if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }
  function _toPropertyKey(arg) { var key = _toPrimitive(arg, "string"); return _typeof(key) === "symbol" ? key : String(key); }
  function _toPrimitive(input, hint) { if (_typeof(input) !== "object" || input === null) return input; var prim = input[Symbol.toPrimitive]; if (prim !== undefined) { var res = prim.call(input, hint || "default"); if (_typeof(res) !== "object") return res; throw new TypeError("@@toPrimitive must return a primitive value."); } return (hint === "string" ? String : Number)(input); }
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd
  var Client = /*#__PURE__*/_createClass(function Client() {
    _classCallCheck(this, Client);
    _defineProperty(this, "prop", 123);
  });
  function* gen() {}
  async function wait() {}
  async function createClient() {
    await wait();
    var _iterator = _createForOfIteratorHelper(gen()),
      _step;
    try {
      for (_iterator.s(); !(_step = _iterator.n()).done;) {
        var iterator = _step.value;
        console.log(iterator);
      }
    } catch (err) {
      _iterator.e(err);
    } finally {
      _iterator.f();
    }
    return new Client();
  }
});
//# sourceMappingURL=client.js.map
",
]
`;

exports[`Outputs (babel) artifacts builds all the artifacts with rollup 8`] = `
[
  {
    "format": "lib",
    "stats": {
      "size": 195,
    },
  },
]
`;

exports[`Outputs (babel) bundle bundles all files into a single file with rollup 1`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) bundle bundles all files into a single file with rollup 2`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-bundle",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, esm) 1`] = `
[
  "esm/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
import '../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, esm) 2`] = `
[
  "package.json",
  {
    "main": "./esm/index.js",
    "module": "./esm/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, esm) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, esm) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, esm) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, lib) 1`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, lib) 2`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, lib) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, lib) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, lib) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, umd) 1`] = `
[
  "package.json",
  {
    "browser": "./umd/index.js",
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, umd) 2`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, umd) 3`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, umd) 4`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (browser, umd) 5`] = `
[
  "umd/index.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports", "../assets/globals-107ab52e.css", "../assets/fonts-4e5dc96c.css", "../assets/styles-b11c3a83.css"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports, require("../assets/globals-107ab52e.css"), require("../assets/fonts-4e5dc96c.css"), require("../assets/styles-b11c3a83.css"));
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports, global.globals107ab52e, global.fonts4e5dc96c, global.stylesB11c3a83);
    global.projectAssets = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports, _globals107ab52e, _fonts4e5dc96c, _stylesB11c3a) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.button = button;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd

  function button() {}
});
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (electron, esm) 1`] = `
[
  "esm/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
import '../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (electron, esm) 2`] = `
[
  "package.json",
  {
    "main": "./esm/index.js",
    "module": "./esm/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (electron, esm) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (electron, esm) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (electron, esm) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (electron, lib) 1`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (electron, lib) 2`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (electron, lib) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (electron, lib) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (electron, lib) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (native, lib) 1`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (native, lib) 2`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (native, lib) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (native, lib) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (native, lib) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, cjs) 1`] = `
[
  "cjs/index.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.cjs.map
",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, cjs) 2`] = `
[
  "package.json",
  {
    "main": "./cjs/index.cjs",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, cjs) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, cjs) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, cjs) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, lib) 1`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, lib) 2`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, lib) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, lib) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, lib) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, mjs) 1`] = `
[
  "mjs/index.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
import '../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.mjs.map
",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, mjs) 2`] = `
[
  "package.json",
  {
    "main": "./mjs/index.mjs",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, mjs) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, mjs) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets bundles all files and references assets (node, mjs) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 1`] = `
[
  "cjs/index.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.cjs.map
",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 2`] = `
[
  "esm/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: esm

import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
import '../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 3`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 4`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "module": "./esm/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 5`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 6`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 7`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 8`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 9`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 10`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 11`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 12`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) bundle with assets uses same assets across multiple formats 13`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) no bundle creates individual files for every source file 1`] = `
[
  "lib/index.js",
  "'use strict';

const other = require('./other.js');
function bar() {}
exports.foo = other.foo;
exports.bar = bar;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle creates individual files for every source file 2`] = `
[
  "lib/not-imported.js",
  "'use strict';

function baz() {}
exports.baz = baz;
//# sourceMappingURL=not-imported.js.map
",
]
`;

exports[`Outputs (babel) no bundle creates individual files for every source file 3`] = `
[
  "lib/other.js",
  "'use strict';

function foo() {}
exports.foo = foo;
//# sourceMappingURL=other.js.map
",
]
`;

exports[`Outputs (babel) no bundle creates individual files for every source file 4`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-bundle",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, esm) 1`] = `
[
  "esm/button/index.js",
  "import '../../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, esm) 2`] = `
[
  "esm/index.js",
  "import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
export { button } from './button/index.js';
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, esm) 3`] = `
[
  "package.json",
  {
    "main": "./esm/index.js",
    "module": "./esm/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, esm) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, esm) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, esm) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, lib) 1`] = `
[
  "lib/button/index.js",
  "'use strict';

require('../../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, lib) 2`] = `
[
  "lib/index.js",
  "'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
const index = require('./button/index.js');
exports.button = index.button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, lib) 3`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, lib) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, lib) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, lib) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, umd) 1`] = `
[
  "package.json",
  {
    "browser": "./umd/index.js",
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, umd) 2`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, umd) 3`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, umd) 4`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, umd) 5`] = `
[
  "umd/button/index.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports", "../../assets/styles-b11c3a83.css"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports, require("../../assets/styles-b11c3a83.css"));
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports, global.stylesB11c3a83);
    global.projectAssets = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports, _stylesB11c3a) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.button = button;
  function button() {}
});
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (browser, umd) 6`] = `
[
  "umd/index.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports", "../assets/globals-107ab52e.css", "../assets/fonts-4e5dc96c.css", "./button/index.js"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports, require("../assets/globals-107ab52e.css"), require("../assets/fonts-4e5dc96c.css"), require("./button/index.js"));
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports, global.globals107ab52e, global.fonts4e5dc96c, global.index);
    global.projectAssets = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports, _globals107ab52e, _fonts4e5dc96c, _index) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  Object.defineProperty(_exports, "button", {
    enumerable: true,
    get: function () {
      return _index.button;
    }
  });
});
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (electron, esm) 1`] = `
[
  "esm/button/index.js",
  "import '../../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (electron, esm) 2`] = `
[
  "esm/index.js",
  "import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
export { button } from './button/index.js';
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (electron, esm) 3`] = `
[
  "package.json",
  {
    "main": "./esm/index.js",
    "module": "./esm/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (electron, esm) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (electron, esm) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (electron, esm) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (electron, lib) 1`] = `
[
  "lib/button/index.js",
  "'use strict';

require('../../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (electron, lib) 2`] = `
[
  "lib/index.js",
  "'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
const index = require('./button/index.js');
exports.button = index.button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (electron, lib) 3`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (electron, lib) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (electron, lib) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (electron, lib) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (native, lib) 1`] = `
[
  "lib/button/index.js",
  "'use strict';

require('../../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (native, lib) 2`] = `
[
  "lib/index.js",
  "'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
const index = require('./button/index.js');
exports.button = index.button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (native, lib) 3`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (native, lib) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (native, lib) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (native, lib) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, cjs) 1`] = `
[
  "cjs/button/index.cjs",
  "'use strict';

require('../../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.cjs.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, cjs) 2`] = `
[
  "cjs/index.cjs",
  "'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
const index = require('./button/index.cjs');
exports.button = index.button;
//# sourceMappingURL=index.cjs.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, cjs) 3`] = `
[
  "package.json",
  {
    "main": "./cjs/index.cjs",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, cjs) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, cjs) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, cjs) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, lib) 1`] = `
[
  "lib/button/index.js",
  "'use strict';

require('../../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, lib) 2`] = `
[
  "lib/index.js",
  "'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
const index = require('./button/index.js');
exports.button = index.button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, lib) 3`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, lib) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, lib) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, lib) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, mjs) 1`] = `
[
  "mjs/button/index.mjs",
  "import '../../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.mjs.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, mjs) 2`] = `
[
  "mjs/index.mjs",
  "import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
export { button } from './button/index.mjs';
//# sourceMappingURL=index.mjs.map
",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, mjs) 3`] = `
[
  "package.json",
  {
    "main": "./mjs/index.mjs",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, mjs) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, mjs) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (babel) no bundle with assets creates individual files and references assets (node, mjs) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 1`] = `
[
  "cjs/server.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: current, Format: cjs

'use strict';

const https = require('node:https');
const _interopDefault = e => e && e.__esModule ? e : {
  default: e
};
const https__default = /*#__PURE__*/_interopDefault(https);
https__default.default.createServer((req, res) => {
  res.writeHead(200, {
    'Content-Type': 'text/plain'
  });
  res.write('Hello World!');
  res.end();
}).listen(8080);
//# sourceMappingURL=server.cjs.map
",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 2`] = `
[
  "esm/client.js",
  "function _typeof(obj) { "@babel/helpers - typeof"; return _typeof = "function" == typeof Symbol && "symbol" == typeof Symbol.iterator ? function (obj) { return typeof obj; } : function (obj) { return obj && "function" == typeof Symbol && obj.constructor === Symbol && obj !== Symbol.prototype ? "symbol" : typeof obj; }, _typeof(obj); }
function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== "undefined" && o[Symbol.iterator] || o["@@iterator"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === "number") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError("Invalid attempt to iterate non-iterable instance.\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method."); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }
function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === "string") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === "Object" && o.constructor) n = o.constructor.name; if (n === "Map" || n === "Set") return Array.from(o); if (n === "Arguments" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }
function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) arr2[i] = arr[i]; return arr2; }
function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if ("value" in descriptor) descriptor.writable = true; Object.defineProperty(target, _toPropertyKey(descriptor.key), descriptor); } }
function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, "prototype", { writable: false }); return Constructor; }
function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError("Cannot call a class as a function"); } }
function _defineProperty(obj, key, value) { key = _toPropertyKey(key); if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }
function _toPropertyKey(arg) { var key = _toPrimitive(arg, "string"); return _typeof(key) === "symbol" ? key : String(key); }
function _toPrimitive(input, hint) { if (_typeof(input) !== "object" || input === null) return input; var prim = input[Symbol.toPrimitive]; if (prim !== undefined) { var res = prim.call(input, hint || "default"); if (_typeof(res) !== "object") return res; throw new TypeError("@@toPrimitive must return a primitive value."); } return (hint === "string" ? String : Number)(input); }
// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: esm
var Client = /*#__PURE__*/_createClass(function Client() {
  _classCallCheck(this, Client);
  _defineProperty(this, "prop", 123);
});
function* gen() {}
async function wait() {}
async function createClient() {
  await wait();
  var _iterator = _createForOfIteratorHelper(gen()),
    _step;
  try {
    for (_iterator.s(); !(_step = _iterator.n()).done;) {
      var iterator = _step.value;
      console.log(iterator);
    }
  } catch (err) {
    _iterator.e(err);
  } finally {
    _iterator.f();
  }
  return new Client();
}
export { createClient };
//# sourceMappingURL=client.js.map
",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 3`] = `
[
  "lib/client.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: legacy, Format: lib

'use strict';

function _typeof(obj) { "@babel/helpers - typeof"; return _typeof = "function" == typeof Symbol && "symbol" == typeof Symbol.iterator ? function (obj) { return typeof obj; } : function (obj) { return obj && "function" == typeof Symbol && obj.constructor === Symbol && obj !== Symbol.prototype ? "symbol" : typeof obj; }, _typeof(obj); }
function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== "undefined" && o[Symbol.iterator] || o["@@iterator"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === "number") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError("Invalid attempt to iterate non-iterable instance.\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method."); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }
function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === "string") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === "Object" && o.constructor) n = o.constructor.name; if (n === "Map" || n === "Set") return Array.from(o); if (n === "Arguments" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }
function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) arr2[i] = arr[i]; return arr2; }
function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if ("value" in descriptor) descriptor.writable = true; Object.defineProperty(target, _toPropertyKey(descriptor.key), descriptor); } }
function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, "prototype", { writable: false }); return Constructor; }
function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError("Cannot call a class as a function"); } }
function _defineProperty(obj, key, value) { key = _toPropertyKey(key); if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }
function _toPropertyKey(arg) { var key = _toPrimitive(arg, "string"); return _typeof(key) === "symbol" ? key : String(key); }
function _toPrimitive(input, hint) { if (_typeof(input) !== "object" || input === null) return input; var prim = input[Symbol.toPrimitive]; if (prim !== undefined) { var res = prim.call(input, hint || "default"); if (_typeof(res) !== "object") return res; throw new TypeError("@@toPrimitive must return a primitive value."); } return (hint === "string" ? String : Number)(input); }
var Client = /*#__PURE__*/_createClass(function Client() {
  _classCallCheck(this, Client);
  _defineProperty(this, "prop", 123);
});
function* gen() {}
async function wait() {}
async function createClient() {
  await wait();
  var _iterator = _createForOfIteratorHelper(gen()),
    _step;
  try {
    for (_iterator.s(); !(_step = _iterator.n()).done;) {
      var iterator = _step.value;
      console.log(iterator);
    }
  } catch (err) {
    _iterator.e(err);
  } finally {
    _iterator.f();
  }
  return new Client();
}
exports.createClient = createClient;
//# sourceMappingURL=client.js.map
",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 4`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

const EXAMPLE = 'foo';
exports.EXAMPLE = EXAMPLE;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 5`] = `
[
  "lib/test.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: experimental, Format: lib

'use strict';

class Spy {
  called = false;
  mock = () => {};
  method() {}
}
function spy() {
  const inst = new Spy();
  return jest.fn(inst.mock);
}
async function wait() {}
exports.spy = spy;
exports.wait = wait;
//# sourceMappingURL=test.js.map
",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 6`] = `
[
  "package.json",
  {
    "browser": "./umd/client.js",
    "dependencies": {
      "typescript": "*",
    },
    "main": "./lib/index.js",
    "module": "./esm/client.js",
    "name": "project-rollup",
    "packemon": {
      "inputs": {
        "client": "src/client.ts",
        "index": "src/index.ts",
        "server": "src/server/core.ts",
        "test": "src/test-utils/base.ts",
      },
    },
  },
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 7`] = `
[
  "umd/client.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define("Packemon", ["exports"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports);
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports);
    global.Packemon = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.createClient = createClient;
  function _typeof(obj) { "@babel/helpers - typeof"; return _typeof = "function" == typeof Symbol && "symbol" == typeof Symbol.iterator ? function (obj) { return typeof obj; } : function (obj) { return obj && "function" == typeof Symbol && obj.constructor === Symbol && obj !== Symbol.prototype ? "symbol" : typeof obj; }, _typeof(obj); }
  function _createForOfIteratorHelper(o, allowArrayLike) { var it = typeof Symbol !== "undefined" && o[Symbol.iterator] || o["@@iterator"]; if (!it) { if (Array.isArray(o) || (it = _unsupportedIterableToArray(o)) || allowArrayLike && o && typeof o.length === "number") { if (it) o = it; var i = 0; var F = function F() {}; return { s: F, n: function n() { if (i >= o.length) return { done: true }; return { done: false, value: o[i++] }; }, e: function e(_e) { throw _e; }, f: F }; } throw new TypeError("Invalid attempt to iterate non-iterable instance.\\nIn order to be iterable, non-array objects must have a [Symbol.iterator]() method."); } var normalCompletion = true, didErr = false, err; return { s: function s() { it = it.call(o); }, n: function n() { var step = it.next(); normalCompletion = step.done; return step; }, e: function e(_e2) { didErr = true; err = _e2; }, f: function f() { try { if (!normalCompletion && it.return != null) it.return(); } finally { if (didErr) throw err; } } }; }
  function _unsupportedIterableToArray(o, minLen) { if (!o) return; if (typeof o === "string") return _arrayLikeToArray(o, minLen); var n = Object.prototype.toString.call(o).slice(8, -1); if (n === "Object" && o.constructor) n = o.constructor.name; if (n === "Map" || n === "Set") return Array.from(o); if (n === "Arguments" || /^(?:Ui|I)nt(?:8|16|32)(?:Clamped)?Array$/.test(n)) return _arrayLikeToArray(o, minLen); }
  function _arrayLikeToArray(arr, len) { if (len == null || len > arr.length) len = arr.length; for (var i = 0, arr2 = new Array(len); i < len; i++) arr2[i] = arr[i]; return arr2; }
  function _defineProperties(target, props) { for (var i = 0; i < props.length; i++) { var descriptor = props[i]; descriptor.enumerable = descriptor.enumerable || false; descriptor.configurable = true; if ("value" in descriptor) descriptor.writable = true; Object.defineProperty(target, _toPropertyKey(descriptor.key), descriptor); } }
  function _createClass(Constructor, protoProps, staticProps) { if (protoProps) _defineProperties(Constructor.prototype, protoProps); if (staticProps) _defineProperties(Constructor, staticProps); Object.defineProperty(Constructor, "prototype", { writable: false }); return Constructor; }
  function _classCallCheck(instance, Constructor) { if (!(instance instanceof Constructor)) { throw new TypeError("Cannot call a class as a function"); } }
  function _defineProperty(obj, key, value) { key = _toPropertyKey(key); if (key in obj) { Object.defineProperty(obj, key, { value: value, enumerable: true, configurable: true, writable: true }); } else { obj[key] = value; } return obj; }
  function _toPropertyKey(arg) { var key = _toPrimitive(arg, "string"); return _typeof(key) === "symbol" ? key : String(key); }
  function _toPrimitive(input, hint) { if (_typeof(input) !== "object" || input === null) return input; var prim = input[Symbol.toPrimitive]; if (prim !== undefined) { var res = prim.call(input, hint || "default"); if (_typeof(res) !== "object") return res; throw new TypeError("@@toPrimitive must return a primitive value."); } return (hint === "string" ? String : Number)(input); }
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: legacy, Format: umd
  var Client = /*#__PURE__*/_createClass(function Client() {
    _classCallCheck(this, Client);
    _defineProperty(this, "prop", 123);
  });
  function* gen() {}
  async function wait() {}
  async function createClient() {
    await wait();
    var _iterator = _createForOfIteratorHelper(gen()),
      _step;
    try {
      for (_iterator.s(); !(_step = _iterator.n()).done;) {
        var iterator = _step.value;
        console.log(iterator);
      }
    } catch (err) {
      _iterator.e(err);
    } finally {
      _iterator.f();
    }
    return new Client();
  }
});
//# sourceMappingURL=client.js.map
",
]
`;

exports[`Outputs (swc) artifacts builds all the artifacts with rollup 8`] = `
[
  {
    "format": "lib",
    "stats": {
      "size": 195,
    },
  },
]
`;

exports[`Outputs (swc) bundle bundles all files into a single file with rollup 1`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

function foo() {}
function bar() {}
exports.bar = bar;
exports.foo = foo;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) bundle bundles all files into a single file with rollup 2`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-bundle",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, esm) 1`] = `
[
  "esm/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: esm

import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
import '../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, esm) 2`] = `
[
  "package.json",
  {
    "main": "./esm/index.js",
    "module": "./esm/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, esm) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, esm) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, esm) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, lib) 1`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: browser, Support: stable, Format: lib

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, lib) 2`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, lib) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, lib) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, lib) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, umd) 1`] = `
[
  "package.json",
  {
    "browser": "./umd/index.js",
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, umd) 2`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, umd) 3`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, umd) 4`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (browser, umd) 5`] = `
[
  "umd/index.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports", "../assets/globals-107ab52e.css", "../assets/fonts-4e5dc96c.css", "../assets/styles-b11c3a83.css"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports, require("../assets/globals-107ab52e.css"), require("../assets/fonts-4e5dc96c.css"), require("../assets/styles-b11c3a83.css"));
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports, global.globals107ab52e, global.fonts4e5dc96c, global.stylesB11c3a83);
    global.projectAssets = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports, _globals107ab52e, _fonts4e5dc96c, _stylesB11c3a) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.button = button;
  // Bundled with Packemon: https://packemon.dev
  // Platform: browser, Support: stable, Format: umd

  function button() {}
});
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (electron, esm) 1`] = `
[
  "esm/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: esm

import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
import '../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (electron, esm) 2`] = `
[
  "package.json",
  {
    "main": "./esm/index.js",
    "module": "./esm/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (electron, esm) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (electron, esm) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (electron, esm) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (electron, lib) 1`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: electron, Support: stable, Format: lib

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (electron, lib) 2`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (electron, lib) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (electron, lib) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (electron, lib) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (native, lib) 1`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: native, Support: stable, Format: lib

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (native, lib) 2`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (native, lib) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (native, lib) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (native, lib) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, cjs) 1`] = `
[
  "cjs/index.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.cjs.map
",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, cjs) 2`] = `
[
  "package.json",
  {
    "main": "./cjs/index.cjs",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, cjs) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, cjs) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, cjs) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, lib) 1`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, lib) 2`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, lib) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, lib) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, lib) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, mjs) 1`] = `
[
  "mjs/index.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
import '../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.mjs.map
",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, mjs) 2`] = `
[
  "package.json",
  {
    "main": "./mjs/index.mjs",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, mjs) 3`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, mjs) 4`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets bundles all files and references assets (node, mjs) 5`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 1`] = `
[
  "cjs/index.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.cjs.map
",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 2`] = `
[
  "esm/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: esm

import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
import '../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 3`] = `
[
  "lib/index.js",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: lib

'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
require('../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 4`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "module": "./esm/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 5`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 6`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 7`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 8`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 9`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 10`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 11`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 12`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) bundle with assets uses same assets across multiple formats 13`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) no bundle creates individual files for every source file 1`] = `
[
  "lib/index.js",
  "'use strict';

const other = require('./other.js');
function bar() {}
exports.foo = other.foo;
exports.bar = bar;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle creates individual files for every source file 2`] = `
[
  "lib/not-imported.js",
  "'use strict';

function baz() {}
exports.baz = baz;
//# sourceMappingURL=not-imported.js.map
",
]
`;

exports[`Outputs (swc) no bundle creates individual files for every source file 3`] = `
[
  "lib/other.js",
  "'use strict';

function foo() {}
exports.foo = foo;
//# sourceMappingURL=other.js.map
",
]
`;

exports[`Outputs (swc) no bundle creates individual files for every source file 4`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-bundle",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, esm) 1`] = `
[
  "esm/button/index.js",
  "import '../../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, esm) 2`] = `
[
  "esm/index.js",
  "import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
export { button } from './button/index.js';
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, esm) 3`] = `
[
  "package.json",
  {
    "main": "./esm/index.js",
    "module": "./esm/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, esm) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, esm) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, esm) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, lib) 1`] = `
[
  "lib/button/index.js",
  "'use strict';

require('../../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, lib) 2`] = `
[
  "lib/index.js",
  "'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
const index = require('./button/index.js');
exports.button = index.button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, lib) 3`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, lib) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, lib) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, lib) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, umd) 1`] = `
[
  "package.json",
  {
    "browser": "./umd/index.js",
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, umd) 2`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, umd) 3`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, umd) 4`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, umd) 5`] = `
[
  "umd/button/index.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports", "../../assets/styles-b11c3a83.css"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports, require("../../assets/styles-b11c3a83.css"));
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports, global.stylesB11c3a83);
    global.projectAssets = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports, _stylesB11c3a) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  _exports.button = button;
  function button() {}
});
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (browser, umd) 6`] = `
[
  "umd/index.js",
  "(function (global, factory) {
  if (typeof define === "function" && define.amd) {
    define(["exports", "../assets/globals-107ab52e.css", "../assets/fonts-4e5dc96c.css", "./button/index.js"], factory);
  } else if (typeof exports !== "undefined") {
    factory(exports, require("../assets/globals-107ab52e.css"), require("../assets/fonts-4e5dc96c.css"), require("./button/index.js"));
  } else {
    var mod = {
      exports: {}
    };
    factory(mod.exports, global.globals107ab52e, global.fonts4e5dc96c, global.index);
    global.projectAssets = mod.exports;
  }
})(typeof globalThis !== "undefined" ? globalThis : typeof self !== "undefined" ? self : this, function (_exports, _globals107ab52e, _fonts4e5dc96c, _index) {
  "use strict";

  Object.defineProperty(_exports, "__esModule", {
    value: true
  });
  Object.defineProperty(_exports, "button", {
    enumerable: true,
    get: function () {
      return _index.button;
    }
  });
});
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (electron, esm) 1`] = `
[
  "esm/button/index.js",
  "import '../../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (electron, esm) 2`] = `
[
  "esm/index.js",
  "import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
export { button } from './button/index.js';
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (electron, esm) 3`] = `
[
  "package.json",
  {
    "main": "./esm/index.js",
    "module": "./esm/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (electron, esm) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (electron, esm) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (electron, esm) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (electron, lib) 1`] = `
[
  "lib/button/index.js",
  "'use strict';

require('../../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (electron, lib) 2`] = `
[
  "lib/index.js",
  "'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
const index = require('./button/index.js');
exports.button = index.button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (electron, lib) 3`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (electron, lib) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (electron, lib) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (electron, lib) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (native, lib) 1`] = `
[
  "lib/button/index.js",
  "'use strict';

require('../../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (native, lib) 2`] = `
[
  "lib/index.js",
  "'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
const index = require('./button/index.js');
exports.button = index.button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (native, lib) 3`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (native, lib) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (native, lib) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (native, lib) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, cjs) 1`] = `
[
  "cjs/button/index.cjs",
  "'use strict';

require('../../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.cjs.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, cjs) 2`] = `
[
  "cjs/index.cjs",
  "'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
const index = require('./button/index.cjs');
exports.button = index.button;
//# sourceMappingURL=index.cjs.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, cjs) 3`] = `
[
  "package.json",
  {
    "main": "./cjs/index.cjs",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, cjs) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, cjs) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, cjs) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, lib) 1`] = `
[
  "lib/button/index.js",
  "'use strict';

require('../../assets/styles-b11c3a83.css');
function button() {}
exports.button = button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, lib) 2`] = `
[
  "lib/index.js",
  "'use strict';

require('../assets/globals-107ab52e.css');
require('../assets/fonts-4e5dc96c.css');
const index = require('./button/index.js');
exports.button = index.button;
//# sourceMappingURL=index.js.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, lib) 3`] = `
[
  "package.json",
  {
    "main": "./lib/index.js",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, lib) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, lib) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, lib) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, mjs) 1`] = `
[
  "mjs/button/index.mjs",
  "import '../../assets/styles-b11c3a83.css';
function button() {}
export { button };
//# sourceMappingURL=index.mjs.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, mjs) 2`] = `
[
  "mjs/index.mjs",
  "import '../assets/globals-107ab52e.css';
import '../assets/fonts-4e5dc96c.css';
export { button } from './button/index.mjs';
//# sourceMappingURL=index.mjs.map
",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, mjs) 3`] = `
[
  "package.json",
  {
    "main": "./mjs/index.mjs",
    "name": "project-assets",
    "packemon": {
      "bundle": true,
      "platform": "node",
    },
  },
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, mjs) 4`] = `
[
  "src/button/styles.css",
  "assets/styles-b11c3a83.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, mjs) 5`] = `
[
  "src/globals.css",
  "assets/globals-107ab52e.css",
]
`;

exports[`Outputs (swc) no bundle with assets creates individual files and references assets (node, mjs) 6`] = `
[
  "src/shared/fonts.css",
  "assets/fonts-4e5dc96c.css",
]
`;

exports[`Special formats cts supports .cts -> .cjs / .d.cts 1`] = `
[
  "cjs/index.cjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: cjs

'use strict';

Object.defineProperty(exports, "__esModule", {
  value: true
});
exports.default = test;
function test() {
  return 123;
}
//# sourceMappingURL=index.cjs.map
",
]
`;

exports[`Special formats cts supports .cts -> .cjs / .d.cts 2`] = `
[
  "package.json",
  {
    "main": "./cjs/index.cjs",
    "name": "project-cts",
    "packemon": {
      "format": "cjs",
      "inputs": {
        "index": "src/index.cts",
      },
    },
    "type": "commonjs",
    "types": "./cjs/index.d.cts",
  },
]
`;

exports[`Special formats cts supports .cts -> .cjs / .d.cts 3`] = `
"export default function test(): number;
//# sourceMappingURL=index.d.cts.map"
`;

exports[`Special formats mts supports .mts -> .mjs / .d.mts 1`] = `
[
  "mjs/index.mjs",
  "// Bundled with Packemon: https://packemon.dev
// Platform: node, Support: stable, Format: mjs

function test() {
  return 'abc';
}
export { test as default };
//# sourceMappingURL=index.mjs.map
",
]
`;

exports[`Special formats mts supports .mts -> .mjs / .d.mts 2`] = `
[
  "package.json",
  {
    "main": "./mjs/index.mjs",
    "name": "project-mts",
    "packemon": {
      "format": "mjs",
      "inputs": {
        "index": "src/index.mts",
      },
    },
    "type": "module",
    "types": "./mjs/index.d.mts",
  },
]
`;

exports[`Special formats mts supports .mts -> .mjs / .d.mts 3`] = `
"export default function test(): string;
//# sourceMappingURL=index.d.mts.map"
`;
